Task/gcndsp 306 add get transparency site to api (#33)
Implementation of the new Api Method to retrieve a single transparency site definition.

Adding service level tests to prove the new api method
Adding the database function to allow the database to surface a single SiteDefinition and all associated SiteAttributes
Including Unit tests

Confirmed SLTs are passing
