# modules/api/src/Service/Interfaces/ITransparencySiteService.cs
@@ -1,5 +1,6 @@
 using GpConnect.NationalDataSharingPortal.Api.Dto.Request;
 using GpConnect.NationalDataSharingPortal.Api.Dto.Response;
+using System;
 using System.Collections.Generic;
 using System.Threading.Tasks;
 
@@ -8,4 +9,6 @@ namespace GpConnect.NationalDataSharingPortal.Api.Service.Interface;
 public interface ITransparencySiteService
 {
     Task<List<TransparencySite>> GetMatchingSitesAsync(TransparencySiteRequest request);
+
+    Task<TransparencySite> GetSiteAsync(Guid id);
 }
